# oxc-ark

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/: renovate.json
.github/workflows/: CI.yml
crates/format/: Cargo.toml  README.md
crates/format/src/: config.rs  external_formatter.rs  format.rs  lib.rs  support.rs
crates/oxk/: Cargo.toml
crates/oxk/src/cli/: mod.rs
crates/oxk/src/format/: mod.rs
npm/oxk/: Cargo.toml  README.md  browser.js  format.cjs  format.d.ts  format.js  format.mjs  index-wrapper.ts  index.d.ts  index.js  oxk.wasi-browser.js  oxk.wasi.cjs  package.json  tsconfig.json
npm/oxk/__test__/: format.spec.ts  index.spec.ts  tsconfig.json
npm/oxk/libs/: prettier.mjs  prettier.ts
npm/oxk/npm/android-arm-eabi/: README.md  package.json
npm/oxk/npm/android-arm64/: README.md  package.json
npm/oxk/npm/darwin-arm64/: README.md  package.json
npm/oxk/npm/darwin-x64/: README.md  package.json
npm/oxk/npm/freebsd-x64/: README.md  package.json
npm/oxk/npm/linux-arm-gnueabihf/: README.md  package.json
npm/oxk/npm/linux-arm64-gnu/: README.md  package.json
npm/oxk/npm/linux-arm64-musl/: README.md  package.json
npm/oxk/npm/linux-x64-gnu/: README.md  package.json
npm/oxk/npm/linux-x64-musl/: README.md  package.json
npm/oxk/npm/wasm32-wasi/: README.md  package.json
npm/oxk/npm/win32-arm64-msvc/: README.md  package.json
npm/oxk/npm/win32-ia32-msvc/: README.md  package.json
npm/oxk/npm/win32-x64-msvc/: README.md  package.json
npm/oxk/src/: lib.rs
scripts/: format.sh
src/: main.rs
src/cli/: format.rs
src/format/: mod.rs
