[workspace]
resolver = "2"
members = [
    "crates/*",
    "npm/oxk",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["richerfu<southsouth0929@foxmail.com>"]
license = "MIT"
description = "An ArkTS/ArkUI tool based on oxc"

[workspace.dependencies]
# Oxc dependencies
oxc_allocator = { git = "https://github.com/ohos-rs/oxc", rev = "a32873413c45741e7f85e901b979ed4ca29b3f83" }
oxc_diagnostics = { git = "https://github.com/ohos-rs/oxc", rev = "a32873413c45741e7f85e901b979ed4ca29b3f83" }
oxc_formatter = { git = "https://github.com/ohos-rs/oxc", rev = "a32873413c45741e7f85e901b979ed4ca29b3f83" }
oxc_parser = { git = "https://github.com/ohos-rs/oxc", rev = "a32873413c45741e7f85e901b979ed4ca29b3f83" }
oxc_span = { git = "https://github.com/ohos-rs/oxc", rev = "a32873413c45741e7f85e901b979ed4ca29b3f83" }

# Common dependencies
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
phf = { version = "0.11", features = ["macros"] }
simdutf8 = "0.1"
json-strip-comments = "3.0"
json-five = "0.2"
oxc-toml = "0.14"
bpaf = "0.9"
owo-colors = "4"
globset = "0.4"
walkdir = "2"
futures = "0.3"

# NAPI dependencies
napi = { version = "3.0", features = ["async", "serde-json"] }
napi-derive = "3.0"
napi-build = "2"

# Optional dependencies (defined in packages that need them)
