[workspace]
resolver = "2"
members = ["crates/*", "npm/oxk"]

[workspace.package]
edition = "2024"
authors = ["richerfu<southsouth0929@foxmail.com>"]
license = "MIT"
description = "An ArkTS/ArkUI tool based on oxc"

[workspace.dependencies]
# inner dependencies
format = { path = "crates/format" }

# Oxc dependencies
oxc_allocator = { git = "https://github.com/ohos-rs/oxc", rev = "79563d5b88f7fb699639b6eb5e8b3037d84669e6" }
oxc_diagnostics = { git = "https://github.com/ohos-rs/oxc", rev = "79563d5b88f7fb699639b6eb5e8b3037d84669e6" }
oxc_formatter = { git = "https://github.com/ohos-rs/oxc", rev = "79563d5b88f7fb699639b6eb5e8b3037d84669e6" }
oxc_parser = { git = "https://github.com/ohos-rs/oxc", rev = "79563d5b88f7fb699639b6eb5e8b3037d84669e6" }
oxc_span = { git = "https://github.com/ohos-rs/oxc", rev = "79563d5b88f7fb699639b6eb5e8b3037d84669e6" }

# Json5format dependencies
json5format = { git = "https://github.com/ohos-rs/json5format", rev = "a4a9a55cc1b8b78631f4c3da251d3a5f0c8a387e" }

# Common dependencies
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
phf = { version = "0.11", features = ["macros"] }
simdutf8 = "0.1"
json-strip-comments = "3.0"
oxc-toml = "0.14"
bpaf = "0.9"
owo-colors = "4"
globset = "0.4"
walkdir = "2"
futures = "0.3"

# NAPI dependencies
napi = { version = "3.0", features = ["async", "serde-json"] }
napi-derive = "3.0"
napi-build = "2"

# Optional dependencies (defined in packages that need them)
