[package]
name = "format"
version = "0.1.0"
edition.workspace = true
authors = ["richerfu<southorange0929@foxmail.com>"]
description = "Reusable multi-language formatter based on oxc"
license.workspace = true

[dependencies]
oxc_allocator = { workspace = true, features = ["pool"] }
oxc_diagnostics = { workspace = true }
oxc_formatter = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc-toml = { workspace = true }
serde_json = { workspace = true }
phf = { workspace = true }
simdutf8 = { workspace = true }
json-strip-comments = { workspace = true }

[dependencies.sort-package-json]
version = "0.0"
optional = true

[dependencies.napi]
workspace = true
optional = true

[dependencies.napi-derive]
workspace = true
optional = true

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:sort-package-json"]
sort-package-json = ["dep:sort-package-json"]
