[package]
authors = ["ohos-rs"]
edition = "2021"
name = "oxk-napi"
version = "0.1.0"
description = "NAPI bindings for oxk formatter"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
format = { path = "../../crates/format", features = ["napi"] }

[build-dependencies]
napi-build = { workspace = true }
