[package]
authors = ["ohos-rs"]
edition = "2021"
name = "oxk-napi"
version = "0.1.0"
description = "NAPI bindings for oxk formatter"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }
format = { path = "../../crates/format", features = ["napi"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true }

# WASM target only supports specific Tokio features
[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }

[build-dependencies]
napi-build = { workspace = true }
